Adjusted test